Hladanie filmov , napojenie na API